welcome.lessons.welcome.array.array123.Array123.scala.error
array123:8: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 3 to nums.length){
         ^